--- a/src/styles/AnimatedBackground.css
+++ b/src/styles/AnimatedBackground.css
@@ -3,14 +3,7 @@
    ======================================== */
 
 .bg-animation {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: 0;
-  pointer-events: none;
+  display: none;
 }
 
 /* Частицы */
